--- a/package.json
+++ b/package.json
@@ -7,24 +7,35 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
-    "@typescript-eslint/parser": "3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "clean-webpack-plugin": "3.0.0",
+    "css-loader": "^4.2.1",
     "eslint": "7.7.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.22.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.10.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3",
     "ts-loader": "8.0.2",
     "typescript": "3.9.7",
-    "webpack": "4.44.1"
+    "webpack": "4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "scripts": {
     "build:prod": "webpack --mode=production",
     "start": "webpack-dev-server",
     "test": "jest",
     "test:clear": "jest --clearCache",
-    "lint:all": "eslint ./src/**/*.ts"
+    "lint:all": "eslint ./src/**/*.ts*"
   },
   "husky": {
     "hooks": {
