--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "@types/jest": "^26.0.10",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
+    "autoprefixer": "^9.8.6",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "^4.2.1",
     "eslint": "7.7.0",
@@ -20,10 +24,15 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-testing-library": "^3.7.0",
     "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^9.0.3",
+    "ts-jest": "^26.2.0",
     "ts-loader": "8.0.2",
     "typescript": "3.9.7",
     "webpack": "4.44.1",
@@ -34,48 +43,13 @@
     "build:prod": "webpack --mode=production",
     "start": "webpack-dev-server",
     "test": "jest",
+    "test:watch": "jest --watch",
     "test:clear": "jest --clearCache",
     "lint:all": "eslint ./src/**/*.ts*"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run test && npm run lint:all"
-    }
-  },
-  "jest": {
-    "globals": {
-      "handlebars-jest": {
-        "helperDirs": [
-          "<rootDir>/src/helpers"
-        ],
-        "partialDirs": [
-          "<rootDir>/src/partials"
-        ],
-        "partialExtensions": [
-          ".hbs",
-          ".html"
-        ]
-      }
-    },
-    "roots": [
-      "<rootDir>/src/"
-    ],
-    "preset": "ts-jest",
-    "modulePaths": [
-      "./src/utils",
-      "./node_modules",
-      "<rootDir>/src"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "ts",
-      "hbs"
-    ],
-    "transform": {
-      "^.+\\.js?$": "babel-jest",
-      "^.+\\.ts?$": "ts-jest",
-      "^.+\\.hbs$": "<rootDir>/src/utils/pre.ts",
-      ".+\\.(css|styl|less|sass|scss)$": "jest-transform-css"
     }
   },
   "repository": {
