--- a/package.json
+++ b/package.json
@@ -7,36 +7,36 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^10.4.9",
-    "@types/jest": "^26.0.10",
-    "@types/react-dom": "^16.9.8",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "10.4.9",
+    "@types/jest": "26.0.10",
+    "@types/react-dom": "16.9.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
-    "autoprefixer": "^9.8.6",
+    "@typescript-eslint/parser": "3.9.1",
+    "autoprefixer": "9.8.6",
     "clean-webpack-plugin": "3.0.0",
-    "css-loader": "^4.2.1",
+    "css-loader": "4.2.1",
     "eslint": "7.7.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-testing-library": "^3.7.0",
-    "html-webpack-plugin": "^4.3.0",
-    "husky": "^4.2.5",
-    "jest": "^26.4.2",
-    "mini-css-extract-plugin": "^0.10.0",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^9.0.3",
-    "ts-jest": "^26.2.0",
+    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-testing-library": "3.7.0",
+    "html-webpack-plugin": "4.3.0",
+    "husky": "4.2.5",
+    "jest": "26.4.2",
+    "mini-css-extract-plugin": "0.10.0",
+    "node-sass": "4.14.1",
+    "postcss-loader": "3.0.0",
+    "sass-loader": "9.0.3",
+    "ts-jest": "26.2.0",
     "ts-loader": "8.0.2",
     "typescript": "3.9.7",
     "webpack": "4.44.1",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
   },
   "scripts": {
