--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Проектная работа (игра) для Яндекс.Практикум",
   "dependencies": {
+    "axios": "^0.20.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
