--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-testing-library": "3.7.0",
     "html-webpack-plugin": "4.3.0",
     "husky": "4.2.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "26.4.2",
     "mini-css-extract-plugin": "0.10.0",
     "node-sass": "4.14.1",
