--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "bem-react-classname": "^1.2.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "10.4.9",
     "@types/jest": "26.0.10",
     "@types/react-dom": "16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
     "autoprefixer": "9.8.6",
