Переносит react-router в dependencies

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bem-react-classname": "^1.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
