--- a/.eslintrc
+++ b/.eslintrc
@@ -23,8 +23,27 @@
       "error",
       "ignorePackages",
       {
+        "ts": "never",
         "tsx": "never",
         "scss": "never"
+      }
+    ],
+    "class-methods-use-this": [
+      "error",
+      {
+        "exceptMethods": [
+          "render",
+          "getInitialState",
+          "getDefaultProps",
+          "getChildContext",
+          "componentWillMount",
+          "componentDidMount",
+          "componentWillReceiveProps",
+          "shouldComponentUpdate",
+          "componentWillUpdate",
+          "componentDidUpdate",
+          "componentWillUnmount"
+        ]
       }
     ]
   },
