--- a/.eslintrc
+++ b/.eslintrc
@@ -32,10 +32,8 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [
-          ".ts",
-          ".tsx"
-        ]
+        "moduleDirectory": ["node_modules", "src/"],
+        "extensions": [".ts", ".tsx"]
       }
     },
     "react": {
