--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "10.4.9",
+    "@types/enzyme": "^3.10.6",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "26.0.10",
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "^5.1.5",
@@ -21,6 +23,8 @@
     "autoprefixer": "9.8.6",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "4.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "7.7.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.11.0",
