--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Проектная работа (игра) для Яндекс.Практикум",
   "dependencies": {
     "@bem-react/classname": "^1.5.8",
+    "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.20.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.4",
@@ -17,6 +20,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "26.0.10",
     "@types/react-dom": "16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
