--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "26.4.2",
     "mini-css-extract-plugin": "0.10.0",
-    "node-sass": "4.14.1",
+    "postcss": "^8.0.5",
     "postcss-custom-properties": "^9.1.1",
-    "postcss-loader": "3.0.0",
-    "sass-loader": "9.0.3",
+    "postcss-loader": "^4.0.2",
+    "postcss-mixins": "^7.0.0",
+    "postcss-nested": "^5.0.0",
+    "postcss-simple-vars": "^6.0.0",
     "ts-jest": "26.2.0",
     "ts-loader": "8.0.2",
     "typescript": "3.9.7",
