--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "26.4.2",
     "mini-css-extract-plugin": "0.10.0",
+    "nock": "13.0.4",
     "postcss": "8.0.5",
     "postcss-custom-properties": "9.1.1",
     "postcss-loader": "4.0.2",
