Разделяет dev и prod сборки

--- a/.eslintrc
+++ b/.eslintrc
@@ -80,5 +80,5 @@
     "browser": true,
     "jest": true
   },
-  "ignorePatterns": ["webpack.config.js"]
+  "ignorePatterns": ["webpack.config.js", "dist"]
 }
