--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test && npm run lint:all"
+      "pre-commit": "npm run lint:all",
+      "pre-push": "npm run test"
     }
   },
   "repository": {
