--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "importHelpers": true,
     "noUnusedLocals": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
