--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:clear": "jest --clearCache",
-    "lint:all": "eslint ./src/**/*.ts*"
+    "lint:all": "eslint ./src --ext .ts --ext .tsx"
   },
   "husky": {
     "hooks": {
