--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "@testing-library/jest-dom": "5.11.4",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.4",
+    "nock": "13.0.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "10.4.9",
     "@types/enzyme": "3.10.6",
     "@types/enzyme-adapter-react-16": "1.0.6",
@@ -30,8 +33,6 @@
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "4.2.1",
     "cssnano": "4.1.10",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.4",
     "eslint": "7.7.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.11.0",
@@ -46,7 +47,6 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "26.4.2",
     "mini-css-extract-plugin": "0.10.0",
-    "nock": "13.0.4",
     "postcss": "8.0.5",
     "postcss-custom-properties": "9.1.1",
     "postcss-loader": "4.0.2",
