--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # dependencies
-/node_modules
+node_modules
 
 # misc
 .DS_Store
@@ -10,11 +10,8 @@
 
 # log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # build
-/dist
+dist
 
-# VS Code settings
-.vscode
+.eslintcache
