--- a/.eslintrc
+++ b/.eslintrc
@@ -88,5 +88,13 @@
 
     //Отключает запрет использования _
     "no-underscore-dangle": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.tsx"],
+      "rules": {
+        "@typescript-eslint/explicit-module-boundary-types": "off"
+      }
+    }
+  ]
 }
