--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@bem-react/classname": "1.5.8",
     "@reduxjs/toolkit": "1.4.0",
     "axios": "0.20.0",
-    "identity-obj-proxy": "3.0.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-redux": "7.2.1",
@@ -25,8 +24,8 @@
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.6",
-    "@typescript-eslint/eslint-plugin": "4.4.1",
-    "@typescript-eslint/parser": "4.4.1",
+    "@typescript-eslint/eslint-plugin": "4.5.0",
+    "@typescript-eslint/parser": "4.5.0",
     "autoprefixer": "9.8.6",
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
@@ -35,15 +34,16 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
     "eslint": "7.11.0",
-    "eslint-config-airbnb-typescript": "11.0.0",
+    "eslint-config-airbnb-typescript": "12.0.0",
     "eslint-config-prettier": "6.13.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.1.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.21.4",
+    "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.1.2",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
+    "identity-obj-proxy": "3.0.0",
     "jest": "26.5.3",
     "lint-staged": "10.4.1",
     "mini-css-extract-plugin": "1.0.0",
@@ -92,6 +92,9 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
   }
 }
