--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "webpack-merge": "5.2.0"
   },
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --config config/webpack/webpack.dev.js",
+    "build": "webpack --config config/webpack/webpack.prod.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
     "docker:build": "docker build -t catcher .",
