--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "strict": true,
     "noImplicitAny": true,
-    "baseUrl": "./src/app",
+    "baseUrl": "./src",
     "outDir": "./dist/",
     "module": "es6",
     "target": "es5",
