--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "1.4.0",
     "axios": "0.20.0",
     "express": "4.17.1",
+    "morgan": "1.10.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-redux": "7.2.1",
@@ -22,6 +23,7 @@
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/express": "4.17.9",
     "@types/jest": "26.0.14",
+    "@types/morgan": "1.9.2",
     "@types/react": "16.9.52",
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
