--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-router-dom": "5.1.6",
     "@typescript-eslint/eslint-plugin": "4.5.0",
     "@typescript-eslint/parser": "4.5.0",
+    "assets-webpack-plugin": "6.0.4",
     "autoprefixer": "9.8.6",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
