--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "1.4.0",
     "axios": "0.20.0",
     "express": "4.17.1",
+    "memory-fs": "0.5.0",
     "morgan": "1.10.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
@@ -18,19 +19,29 @@
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "17.0.0",
     "@testing-library/jest-dom": "5.11.4",
+    "@types/css-minimizer-webpack-plugin": "1.1.1",
     "@types/enzyme": "3.10.7",
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/express": "4.17.9",
+    "@types/ignore-styles": "5.0.0",
+    "@types/is-object": "1.0.1",
     "@types/jest": "26.0.14",
+    "@types/mini-css-extract-plugin": "1.2.1",
     "@types/morgan": "1.9.2",
+    "@types/node": "14.14.10",
     "@types/react": "16.9.52",
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.6",
+    "@types/terser-webpack-plugin": "5.0.2",
+    "@types/webpack": "4.41.25",
+    "@types/webpack-dev-middleware": "3.7.2",
+    "@types/webpack-hot-middleware": "2.25.3",
+    "@types/webpack-node-externals": "2.5.0",
     "@typescript-eslint/eslint-plugin": "4.5.0",
     "@typescript-eslint/parser": "4.5.0",
-    "assets-webpack-plugin": "6.0.4",
     "autoprefixer": "9.8.6",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
@@ -45,9 +56,10 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.1.2",
-    "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
     "identity-obj-proxy": "3.0.0",
+    "ignore-styles": "5.0.1",
+    "is-object": "1.0.1",
     "jest": "26.5.3",
     "lint-staged": "10.4.1",
     "mini-css-extract-plugin": "1.0.0",
@@ -60,23 +72,29 @@
     "postcss-preset-env": "6.7.0",
     "postcss-simple-vars": "6.0.1",
     "prettier": "2.1.2",
+    "promise-polyfill": "8.2.0",
+    "react-hot-loader": "4.13.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.0.0",
     "ts-jest": "26.4.1",
     "ts-loader": "8.0.5",
+    "ts-node": "9.0.0",
+    "tsconfig-paths": "3.9.0",
+    "tsconfig-paths-webpack-plugin": "3.3.0",
     "typescript": "4.0.3",
     "webpack": "5.1.3",
     "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.0",
+    "webpack-dev-middleware": "4.0.2",
+    "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "5.2.0",
     "webpack-node-externals": "2.5.2"
   },
   "scripts": {
-    "start": "webpack serve --config config/webpack/webpack.dev.js",
-    "start:server": "node dist/server",
-    "build:app": "webpack --config config/webpack/webpack.prod.js",
-    "build:server": "webpack --config config/webpack/webpack.ssr.js",
+    "develop": "ts-node --require tsconfig-paths/register --require ignore-styles src/server/server",
+    "build:app": "webpack --config config/webpack/app.prod.config.ts --json=dist/compilation-stats.json",
+    "build:server": "webpack --config config/webpack/server.config.ts",
     "build": "npm run build:app && npm run build:server",
+    "start:server": "NODE_ENV=production node dist/server",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
     "docker:build": "docker build -t catcher .",
