--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "4.17.1",
     "memory-fs": "0.5.0",
     "morgan": "1.10.0",
+    "open": "7.3.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-redux": "7.2.1",
