--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "webpack-node-externals": "2.5.2"
   },
   "scripts": {
-    "develop": "ts-node --require tsconfig-paths/register --require ignore-styles src/server/server",
+    "develop": "NODE_ENV=development ts-node --require tsconfig-paths/register --require ignore-styles src/server/server",
     "build:app": "webpack --config config/webpack/app.prod.config.ts --json=dist/compilation-stats.json",
     "build:server": "webpack --config config/webpack/server.config.ts",
     "build": "npm run build:app && npm run build:server",
