--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/qs": "6.9.5",
     "axios": "0.20.0",
     "express": "4.17.1",
+    "http-proxy-middleware": "1.0.6",
     "memory-fs": "0.5.0",
     "morgan": "1.10.0",
     "open": "7.3.0",
