--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@reduxjs/toolkit": "1.4.0",
     "@types/qs": "6.9.5",
     "axios": "0.20.0",
+    "cookie-parser": "1.4.5",
     "express": "4.17.1",
     "http-proxy-middleware": "1.0.6",
+    "lightcookie": "1.0.24",
     "memory-fs": "0.5.0",
     "morgan": "1.10.0",
     "open": "7.3.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@hot-loader/react-dom": "17.0.0",
     "@testing-library/jest-dom": "5.11.4",
+    "@types/cookie-parser": "1.4.2",
     "@types/css-minimizer-webpack-plugin": "1.1.1",
     "@types/enzyme": "3.10.7",
     "@types/enzyme-adapter-react-16": "1.0.6",
