--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "paths": {
       "app/*": ["./src/app/*"],
-      "server/*": ["./src/server/*"]
+      "server/*": ["./src/server/*"],
     },
     "outDir": "./dist/",
     "module": "commonjs",
