Отключение правила линтера, запрещающего импортировать компоненты, именованные по БЭМ

--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,9 @@
 
     "react/state-in-constructor": "off",
 
+    // Разрешает импортировать компоненты, именованные по БЭМ
+    "react/jsx-pascal-case": "off",
+
     /* Redux */
 
     // Отключает запрет на мутацию аргументов. В Redux Toolkit стейт можно мутировать.
