--- a/package.json
+++ b/package.json
@@ -64,13 +64,12 @@
     "eslint-plugin-react-hooks": "4.1.2",
     "husky": "4.3.0",
     "identity-obj-proxy": "3.0.0",
-    "ignore-styles": "5.0.1",
     "is-object": "1.0.1",
     "jest": "26.5.3",
     "lint-staged": "10.4.1",
     "mini-css-extract-plugin": "1.0.0",
     "nock": "13.0.4",
-    "nodemon": "2.0.6",
+    "nodemon-webpack-plugin": "4.3.2",
     "null-loader": "4.0.1",
     "postcss-custom-properties": "10.0.0",
     "postcss-loader": "4.0.4",
@@ -96,11 +95,11 @@
     "webpack-node-externals": "2.5.2"
   },
   "scripts": {
-    "develop": "NODE_ENV=development nodemon",
-    "build:app": "webpack --config config/webpack/app.prod.config.ts --json=dist/compilation-stats.json",
-    "build:server": "webpack --config config/webpack/server.config.ts",
+    "dev": "webpack --config config/webpack/server/webpack.dev.ts",
+    "build:client": "webpack --config config/webpack/client/webpack.prod.ts --json=dist/compilation-stats.json",
+    "build:server": "webpack --config config/webpack/server/webpack.prod.ts",
     "build": "npm run build:app && npm run build:server",
-    "start:server": "NODE_ENV=production node dist/server",
+    "start": "NODE_ENV=production node dist/server",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
     "docker:build": "docker build -t catcher .",
