Рефакторинг конфигурации приложения

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "4.17.1",
     "http-proxy-middleware": "1.0.6",
     "is-object": "1.0.2",
+    "lodash": "4.17.20",
     "morgan": "1.10.0",
     "qs": "6.9.4",
     "react": "16.14.0",
@@ -33,6 +34,7 @@
     "@types/ignore-styles": "5.0.0",
     "@types/is-object": "1.0.1",
     "@types/jest": "26.0.14",
+    "@types/lodash": "4.14.167",
     "@types/mini-css-extract-plugin": "1.2.1",
     "@types/morgan": "1.9.2",
     "@types/node": "14.14.10",
