--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Проектная работа (игра) для Яндекс.Практикум",
   "dependencies": {
     "@bem-react/classname": "1.5.8",
+    "@bem-react/classnames": "1.3.9",
     "@reduxjs/toolkit": "1.4.0",
     "axios": "0.21.1",
     "cookie-parser": "1.4.5",
