--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
   "devDependencies": {
     "@hot-loader/react-dom": "17.0.1",
     "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.2.3",
     "@types/cookie-parser": "1.4.2",
     "@types/css-minimizer-webpack-plugin": "1.1.1",
-    "@types/enzyme": "3.10.7",
-    "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/express": "4.17.9",
     "@types/ignore-styles": "5.0.0",
     "@types/jest": "26.0.14",
@@ -53,8 +52,6 @@
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
     "css-minimizer-webpack-plugin": "1.1.5",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.5",
     "eslint": "7.11.0",
     "eslint-config-airbnb-typescript": "12.0.0",
     "eslint-config-prettier": "6.13.0",
