--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "0.21.1",
     "cookie-parser": "1.4.5",
     "express": "4.17.1",
+    "express-session": "1.17.1",
     "http-proxy-middleware": "1.0.6",
     "lodash": "4.17.20",
     "morgan": "1.10.0",
@@ -30,6 +31,7 @@
     "@types/cookie-parser": "1.4.2",
     "@types/css-minimizer-webpack-plugin": "1.1.1",
     "@types/express": "4.17.9",
+    "@types/express-session": "1.17.3",
     "@types/ignore-styles": "5.0.0",
     "@types/jest": "26.0.14",
     "@types/lodash": "4.14.167",
