--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "set-cookie-parser": "2.4.7"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "17.0.1",
@@ -43,6 +44,7 @@
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.6",
+    "@types/set-cookie-parser": "2.4.0",
     "@types/terser-webpack-plugin": "5.0.2",
     "@types/webpack": "4.41.25",
     "@types/webpack-dev-middleware": "3.7.2",
