--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "express": "4.17.1",
     "http-proxy-middleware": "1.0.6",
     "lodash": "4.17.20",
-    "morgan": "1.10.0",
+    "pino": "6.11.0",
+    "pino-http": "5.4.0",
+    "pino-pretty": "4.5.0",
     "qs": "6.9.4",
     "react": "16.14.0",
     "react-dom": "16.14.0",
@@ -35,8 +37,8 @@
     "@types/jest": "26.0.14",
     "@types/lodash": "4.14.167",
     "@types/mini-css-extract-plugin": "1.2.1",
-    "@types/morgan": "1.9.2",
     "@types/node": "14.14.10",
+    "@types/pino-http": "5.4.0",
     "@types/qs": "6.9.5",
     "@types/react": "16.9.52",
     "@types/react-dom": "16.9.8",
