--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "axios": "0.21.1",
     "cookie-parser": "1.4.5",
     "express": "4.17.1",
+    "express-pino-logger": "6.0.0",
     "http-proxy-middleware": "1.0.6",
     "lodash": "4.17.20",
-    "pino": "6.11.0",
-    "pino-http": "5.4.0",
     "pino-pretty": "4.5.0",
     "qs": "6.9.4",
     "react": "16.14.0",
@@ -33,12 +32,12 @@
     "@types/cookie-parser": "1.4.2",
     "@types/css-minimizer-webpack-plugin": "1.1.1",
     "@types/express": "4.17.9",
+    "@types/express-pino-logger": "4.0.2",
     "@types/ignore-styles": "5.0.0",
     "@types/jest": "26.0.14",
     "@types/lodash": "4.14.167",
     "@types/mini-css-extract-plugin": "1.2.1",
     "@types/node": "14.14.10",
-    "@types/pino-http": "5.4.0",
     "@types/qs": "6.9.5",
     "@types/react": "16.9.52",
     "@types/react-dom": "16.9.8",
